<resources>
    <!-- Need to change App Name Here -->
    <string name="facebook_app_id">2236402436650575</string>
    <string name="fb_login_protocol_scheme">fb2236402436650575</string>
    <!--font-->
    <string name="adineue_pro_light">adineuePRO-Light.otf</string>
    <string name="adineue_pro_regular">adineuePRO-Regular.otf</string>
    <string name="adineue_pro_bold">adineuePRO-Bold.otf</string>
    <!--font-->

    <string name="app_name">JeeboDelivery</string>
    <string name="login">LOGIN</string>
    <string name="login_small">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="signup">Signup</string>
    <string name="connect">Connect</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="subscribe">Subscribe</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="please_enter_your_email">Please Enter Your Registered Email Id</string>
    <string name="submit">Submit</string>
    <string name="phone_verification">Phone Verification</string>
    <string name="otp_sent_msg">OTP has been sent on your Registered Phone Number. Please enter OTP to move forward.</string>
    <string name="verify">Verify</string>
    <string name="resend_otp">Resend Otp</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="remove">Remove</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="camera_permission_msg">Please provide Camera and Storage Permission required in Settings to access Camera</string>
    <string name="gallery_permission_msg">Please provide Storage Permission in Setting to access Gallery</string>
    <string name="external_storage">External storage</string>
    <string name="permission_necessary">Permission necessary</string>
    <string name="permission_is_necessary">Permission is necessary</string>
    <string name="email_missing_error">Please enter email id</string>
    <string name="email_invalid_error">Please enter a valid email id</string>
    <string name="password_missing_error">Please enter password</string>
    <string name="password_invalid_error">Password must be between 6-15 characters</string>
    <string name="confirm_password_invalid_error">Confirm Password must be between 6-15 characters</string>
    <string name="password_mismatch_error">Password and Confirm Password must be same</string>
    <string name="name_missing_error">Please enter name</string>
    <string name="surname_missing_error">Please enter surname</string>
    <string name="phone_missing_error">Please enter phone number</string>
    <string name="phone_invalid_error">Please enter 9 or 10 digit correct phone number</string>
    <string name="your_email_with_pass_reset_link_send">An email with password reset link has been sent to
        your registered email address.
    </string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="profile_parameters">Profile Parameters</string>
    <string name="money_and_statistics">Money and Statistics</string>
    <string name="orders_ends">Orders Ends</string>
    <string name="contact_jeebo">Contact Jeebo</string>
    <string name="report_a_bug">Report a bug</string>
    <string name="dashboard">Dashboard</string>
    <string name="pending_orders">Pending Orders</string>
    <string name="orders_in_process">Orders in Process</string>
    <string name="terminated_orders">Terminated Orders</string>

    <string name="location_permission_alert">Please provide Location Permission in Setting</string>
    <string name="enable_gps">Please enable GPS</string>
    <string name="save">Save</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_in_charge">Take in Charge</string>
    <string name="order_no">Order No:</string>
    <string name="confirm">confirm</string>
    <string name="confirm_caps">Confirm</string>
    <string name="e_shop_details">E-Shop Details</string>
    <string name="client_details">Client Details</string>
    <string name="delivery_time">Delivery Time</string>
    <string name="payment_methods">Payment Method</string>
    <string name="logout">Logout</string>
    <string name="i_am_available">I am Available</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="merchant">Merchant:</string>
    <string name="client">Client:</string>
    <string name="client_request">Client Request:</string>
    <string name="special_instructions">Special Instructions:</string>
    <string name="network_error">Seems like you are not connected to the internet, please check your network settings and try again</string>
    <string name="payment_method">Payment Method</string>
    <string name="total_price">Total Price</string>
    <string name="pay_to_merchant">Pay to Merchant</string>
    <string name="collect_from_client">Collect from Client</string>
    <string name="accept_order_warning">Are you sure you want to accept this order?</string>
    <string name="logout_warning">Are you sure want to logout?</string>
    <string name="exit_warning">Are you sure want to exit?</string>
    <string name="no_current_order">No current order</string>
    <string name="no_result_found">No result found</string>
    <string name="change_status">Change Status</string>
    <string name="view_on_map">Direction</string>
    <string name="select_cancel_reason">Select Cancel Reason</string>
    <string name="select_cat">Select Category</string>
    <string name="select_sub_cat">Select Sub Category</string>
    <string name="order_details">Order Details</string>
    <string name="order_ends">Order Ends</string>
    <string name="money_statistics">Money and Statistics</string>
    <string name="call">Call</string>
    <string name="phone_not_available">Phone not available</string>
    <string name="call_permission_msg">Please provide permission to call in setting</string>
    <string name="reason_for_cancellation">Reason for Cancellation:</string>
    <string name="earnings">Earnings</string>
    <string name="return_to_jeebo">Refund to Jeebo</string>
    <string name="profile_updated_successfully">Profile Updated Successfully</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="price">Price</string>
    <string name="current_dues">Current Dues</string>
    <string name="arrived_nat_store">Arrived\n  at Store</string>
    <string name="order_npicked_up">Order\n  Picked Up</string>
    <string name="order_n_completed">Order\n  Completed</string>
    <string name="complete_ur_order">Please complete your order</string>
    <string name="pharmacy_details">Pharmacy Details</string>
    <string name="pharmacy">Pharmacy</string>

</resources>
