<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rl_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg">


    <ImageView
        android:id="@+id/iv_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_12"
        android:padding="@dimen/dp_8"
        android:src="@drawable/back_icon_white" />

    <LinearLayout
        android:id="@+id/ll_send_mail"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/pass_verify_green" />

        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/forgot_password"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_14"
            app:ctypeface="@string/adineue_pro_regular" />

        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_15"
            android:gravity="center"
            android:text="@string/please_enter_your_email"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_11"
            app:ctypeface="@string/adineue_pro_regular" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_68"
            android:gravity="center">

            <ImageView
                android:id="@+id/iv_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="@dimen/dp_5"
                android:src="@drawable/white_email" />

            <com.app.jeebo.driver.view.CustomEditText
                android:id="@+id/et_email"
                android:layout_width="@dimen/dp_210"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/iv_name"
                android:layout_gravity="center"
                android:layout_toRightOf="@+id/iv_name"
                android:backgroundTint="@color/white"
                android:hint="@string/email"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:maxLength="40"
                android:maxLines="1"
                android:textColor="@color/white"
                android:textColorHint="@color/white"
                android:textSize="@dimen/sp_11"
                app:ctypeface="@string/adineue_pro_regular" />

        </RelativeLayout>

        <com.app.jeebo.driver.view.CustomTextView
            android:id="@+id/tv_send"
            android:layout_width="@dimen/dp_172"
            android:layout_height="@dimen/dp_39"
            android:layout_gravity="center"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginRight="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_63"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/color_0B94C7"
            android:textSize="@dimen/dp_14"
            app:ctypeface="@string/adineue_pro_regular" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_sent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@drawable/forgot_pass_done" />

        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_60"
            android:gravity="center"
            android:padding="@dimen/dp_12"
            android:text="@string/your_email_with_pass_reset_link_send"
            android:textColor="@color/white"
            android:textSize="@dimen/dp_13"
            app:ctypeface="@string/adineue_pro_regular" />


        <com.app.jeebo.driver.view.CustomTextView
            android:id="@+id/tv_login"
            android:layout_width="@dimen/dp_172"
            android:layout_height="@dimen/dp_39"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dp_125"
            android:background="@drawable/bg_button"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/color_0B94C7"
            android:textSize="@dimen/dp_14"
            app:ctypeface="@string/adineue_pro_regular" />

    </LinearLayout>



</RelativeLayout>