<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.home.activity.CancelledOrdersActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cv_top"
        android:layout_height="@dimen/dp_50">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_green_theme"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/back_icon_white"
                android:id="@+id/iv_back"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <com.app.jeebo.driver.view.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/order_ends"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                app:ctypeface="@string/adineue_pro_regular"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rv_orders"
        android:padding="@dimen/dp_10"
        android:layout_below="@+id/cv_top"
        android:layout_height="wrap_content"/>

    <com.app.jeebo.driver.view.CustomTextView
        android:layout_width="match_parent"
        android:gravity="center"
        android:id="@+id/tv_no_record"
        android:textSize="@dimen/sp_16"
        android:visibility="gone"
        app:ctypeface="@string/adineue_pro_regular"
        android:textColor="@color/color_black"
        android:text="@string/no_current_order"
        android:layout_height="match_parent" />

</RelativeLayout>