<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rl_camera"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_15sdp">

        <com.app.jeebo.driver.view.CustomTextView
            android:id="@+id/tv_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:ctypeface="@string/adineue_pro_regular"
            android:text="@string/camera"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_13ssp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_camera"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:alpha="0.8"
        android:layout_below="@+id/rl_camera"
        android:background="@color/view_line" />

    <RelativeLayout
        android:id="@+id/rl_gallery"
        android:layout_width="match_parent"
        android:layout_below="@+id/view_camera"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_15sdp">

        <com.app.jeebo.driver.view.CustomTextView
            android:id="@+id/tv_gallery"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/gallery"
            app:ctypeface="@string/adineue_pro_regular"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_13ssp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_gallery"
        android:layout_below="@id/rl_gallery"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:visibility="visible"
        android:alpha="0.8"
        android:background="@color/view_line" />

    <RelativeLayout
        android:id="@+id/rl_remove"
        android:layout_width="match_parent"
        android:layout_below="@+id/view_gallery"
        android:visibility="visible"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/_15sdp">

        <com.app.jeebo.driver.view.CustomTextView
            android:id="@+id/tv_remove"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/remove"
            app:ctypeface="@string/adineue_pro_regular"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_13ssp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_remove"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:alpha="0.8"
        android:visibility="visible"
        android:layout_below="@id/rl_remove"
        android:background="@color/view_line" />

</RelativeLayout>