<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".modules.home.activity.StatsActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:id="@+id/cv_top"
        android:layout_height="@dimen/dp_50">

        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@drawable/bg_green_theme"
            android:layout_height="match_parent">

            <ImageView
                android:layout_width="wrap_content"
                android:src="@drawable/back_icon_white"
                android:id="@+id/iv_back"
                android:layout_centerVertical="true"
                android:padding="@dimen/dp_10"
                android:layout_height="wrap_content" />

            <com.app.jeebo.driver.view.CustomTextView
                android:layout_width="wrap_content"
                android:text="@string/money_statistics"
                android:layout_centerInParent="true"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"
                app:ctypeface="@string/adineue_pro_regular"
                android:layout_height="wrap_content" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

   <RelativeLayout
       android:layout_width="match_parent"
       android:padding="@dimen/_10sdp"
       android:layout_below="@+id/cv_top"
       android:layout_height="wrap_content">

       <com.app.jeebo.driver.view.CustomTextView
           android:layout_width="wrap_content"
           android:text=""
           android:id="@+id/tv_driver_name"
           android:layout_centerHorizontal="true"
           android:textColor="@color/color_black"
           android:textSize="@dimen/sp_15"
           app:ctypeface="@string/adineue_pro_regular"
           android:layout_height="wrap_content" />

       <Spinner
           android:layout_width="wrap_content"
           android:id="@+id/spinner_months"
           android:layout_marginTop="@dimen/_20sdp"
           android:layout_below="@+id/tv_driver_name"
           android:layout_centerHorizontal="true"
           android:layout_height="wrap_content"/>

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:id="@+id/cv_earning"
           android:layout_marginLeft="@dimen/dp_10"
           android:layout_marginRight="@dimen/dp_10"
           android:layout_marginTop="@dimen/_20sdp"
           android:layout_below="@+id/spinner_months"
           android:elevation="@dimen/_5sdp"
           app:cardElevation="@dimen/_5sdp"
           android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:padding="@dimen/dp_10"
               android:layout_height="wrap_content">

               <com.app.jeebo.driver.view.CustomTextView
                   android:layout_width="wrap_content"
                   android:text="@string/earnings"
                   android:id="@+id/tv_earning_head"
                   android:layout_centerVertical="true"
                   android:textColor="@color/color_black"
                   android:textSize="@dimen/sp_13"
                   app:ctypeface="@string/adineue_pro_regular"
                   android:layout_height="wrap_content" />

               <com.app.jeebo.driver.view.CustomTextView
                   android:layout_width="wrap_content"
                   android:text=""
                   android:id="@+id/tv_earning"
                   android:layout_alignParentRight="true"
                   android:textColor="@color/color_black"
                   android:textSize="@dimen/sp_20"
                   app:ctypeface="@string/adineue_pro_bold"
                   android:layout_height="wrap_content" />

           </RelativeLayout>

       </androidx.cardview.widget.CardView>

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:id="@+id/cv_return"
           android:layout_below="@+id/cv_earning"
           android:layout_marginLeft="@dimen/dp_10"
           android:layout_marginBottom="@dimen/dp_10"
           android:layout_marginRight="@dimen/dp_10"
           android:layout_marginTop="@dimen/_20sdp"
           android:elevation="@dimen/_5sdp"
           app:cardElevation="@dimen/_5sdp"
           android:layout_height="wrap_content">

           <RelativeLayout
               android:layout_width="match_parent"
               android:padding="@dimen/dp_10"
               android:layout_height="wrap_content">

               <com.app.jeebo.driver.view.CustomTextView
                   android:layout_width="wrap_content"
                   android:text="@string/return_to_jeebo"
                   android:id="@+id/tv_return_head"
                   android:layout_centerVertical="true"
                   android:textColor="@color/color_black"
                   android:textSize="@dimen/sp_13"
                   app:ctypeface="@string/adineue_pro_regular"
                   android:layout_height="wrap_content" />

               <com.app.jeebo.driver.view.CustomTextView
                   android:layout_width="wrap_content"
                   android:text=""
                   android:layout_alignParentRight="true"
                   android:id="@+id/tv_return"
                   android:layout_centerHorizontal="true"
                   android:textColor="@color/color_black"
                   android:textSize="@dimen/sp_20"
                   app:ctypeface="@string/adineue_pro_bold"
                   android:layout_height="wrap_content" />

           </RelativeLayout>

       </androidx.cardview.widget.CardView>

   </RelativeLayout>

</RelativeLayout>