<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:padding="@dimen/dp_5"
    android:layout_height="wrap_content"
    android:background="@drawable/rv_background"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_30"
        android:src="@drawable/rv_logo" />

    <com.app.jeebo.driver.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_logo"
        android:layout_marginLeft="@dimen/dp_7"
        android:layout_marginTop="@dimen/dp_11"
        android:gravity="center_horizontal"
        android:letterSpacing="0.01"
        android:lineSpacingExtra="4sp"
        android:text="@string/take_in_charge"
        android:textColor="@color/color_0b95c7"
        android:textSize="@dimen/sp_14"
        app:ctypeface="@string/adineue_pro_regular" />

    <com.app.jeebo.driver.view.CustomTextView
        android:id="@+id/tv_orderno_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_toRightOf="@id/iv_logo"
        android:letterSpacing="0.02"
        android:text="@string/order_no"
        android:textColor="@color/color_707070"
        android:textSize="@dimen/sp_13"
        app:ctypeface="@string/adineue_pro_regular" />

    <com.app.jeebo.driver.view.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="XXXXXX"
        android:layout_marginLeft="@dimen/dp_5"
        android:textSize="@dimen/sp_14"
        android:layout_marginTop="@dimen/dp_13"
        android:layout_toRightOf="@id/tv_orderno_head"
        android:textColor="@color/color_black"
        app:ctypeface="@string/adineue_pro_regular" />

    <ImageView
        android:id="@+id/iv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_orderno_head"
        android:layout_marginLeft="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_toRightOf="@id/iv_logo"
        android:src="@drawable/food_icon" />

    <com.app.jeebo.driver.view.CustomTextView
        android:id="@+id/tv_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_orderno_head"
        android:layout_marginLeft="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_3"
        android:layout_toRightOf="@id/iv_item"
        android:text="Food"
        app:ctypeface="@string/adineue_pro_regular" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/iv_item"
        android:id="@+id/rl_merchant"
        android:layout_toRightOf="@id/iv_logo"
        android:layout_marginLeft="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_height="wrap_content">


        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:text="@string/merchant"
            android:id="@+id/tv_merchant"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_707070"
            app:ctypeface="@string/adineue_pro_regular"
            android:layout_height="wrap_content" />

        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:text="Levis"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_toRightOf="@+id/tv_merchant"
            android:id="@+id/tv_merchant_name"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_black"
            app:ctypeface="@string/adineue_pro_regular"
            android:layout_height="wrap_content" />


        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_merchant_name"
            android:drawablePadding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_3"
            android:drawableLeft="@drawable/marker_grey"
            android:text="Tower A, Cyber Logix Park, Noida 62"
            app:ctypeface="@string/adineue_pro_regular" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_below="@id/rl_merchant"
        android:id="@+id/rl_client"
        android:layout_toRightOf="@id/iv_logo"
        android:layout_marginLeft="@dimen/dp_46"
        android:layout_marginTop="@dimen/dp_5"
        android:layout_height="wrap_content">


        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:text="@string/client"
            android:id="@+id/tv_client"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_707070"
            app:ctypeface="@string/adineue_pro_regular"
            android:layout_height="wrap_content" />

        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:text="Anshul Sharma"
            android:layout_marginLeft="@dimen/dp_3"
            android:layout_toRightOf="@+id/tv_client"
            android:id="@+id/tv_client_name"
            android:textSize="@dimen/sp_13"
            android:textColor="@color/color_black"
            app:ctypeface="@string/adineue_pro_regular"
            android:layout_height="wrap_content" />


        <com.app.jeebo.driver.view.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_client_name"
            android:drawablePadding="@dimen/dp_5"
            android:layout_marginTop="@dimen/dp_3"
            android:layout_marginBottom="@dimen/dp_11"
            android:drawableLeft="@drawable/marker_grey"
            android:text="Tower A, Cyber Logix Park, Noida 62"
            app:ctypeface="@string/adineue_pro_regular" />

    </RelativeLayout>



</RelativeLayout>